<resources>
    <!--Application name and activities-->
    <string name="app_name">Service Desk</string>
    <string name="login_activity">Логирај се</string>
    <string name="home_activity">Почетна</string>
    <string name="tasks_activity">Таскови</string>
    <string name="services_activity">Сервиси</string>
    <string name="sos_activity">Служба за спасување</string>

    <!--Login strings-->
    <string name="sign_in">Најави се</string>
    <string name="user_name">Корисничко име</string>
    <string name="password">Лозинка</string>

    <!--Errors-->
    <string name="error_no_network">Вклучете го интернетот на телефонот и обидете се повторно</string>
    <string name="error_wrong_userName_password">Внесовте погрешно корисничко име или лозинка</string>
    <string name="error_field_empty">Полето не смее да биде празно</string>
    <string name="error_may_no_work_properly">Без интернет конекција апликацијата може да не работи прописно</string>

    <!--Menu items-->
    <string name="menu">Мени </string>
    <string name="menu_tasks">Таскови</string>
    <string name="menu_services">Сервисирања</string>
    <string name="menu_sos">Служба за спасување</string>
    <string name="menu_log_out">Одлогирај се</string>
    <string name="menu_home">Почетна</string>
    <string name="navigation_drawer_open">Отвори го менито</string>
    <string name="navigation_drawer_close">Затвори го менито</string>

    <!--Tasks-->
    <string name="tab_delayed_tasks">Закажани таскови</string>
    <string name="tab_open_task">Отворен таск</string>
    <string name="tab_archived_task">Архивирани таскови</string>
    <string name="no_tasks">Немате таскови за прикажување</string>
    <string name="no_open_task">Немате отворен таск</string>
    <string name="end_task">Заврши таск</string>
    <string name="new_task">Отвори нов таск</string>
    <string name="directions">Навигација</string>

    <!--Task popup strings-->
    <string name="accept_task">Прифати го таскот</string>
    <string name="accept_delay_task">Прифати го таскот со задоцнување</string>
    <string name="decline_task">Откажи го таскот</string>
    <string name="comment">Коментар</string>
    <string name="delay">Задоцнување</string>
    <string name="task">ТАСК</string>

    <!--Task View-->
    <string name="title">Име на таск: </string>
    <string name="location">Локација: </string>
    <string name="city">Град: </string>
    <string name="notes">Забелешки: </string>
    <string name="building">Име на зграда: </string>
    <string name="elevator">Тип на лифт: </string>
    <string name="servicer">Сервисер/и: </string>
    <string name="address">Адреса</string>
    <string name="building_name">Име на зграда</string>
    <string name="search_by">Пребарај по:</string>

    <!--Dialogs-->
    <string name="ok">Во ред</string>
    <string name="cancel">Откажи</string>
    <string name="confirmation">Дали сте сигурни?</string>
    <string name="yes">Да</string>
    <string name="no">Не</string>
    <string name="send">Испрати sos</string>

    <!--Toasts-->
    <string name="toast_end_task">Тукушто го завршивте таскот</string>
    <string name="sos_sending">Sos пораките се испраќаат </string>
    <string name="title_activity_maps">Map</string>

    <!--Services-->
    <string name="elevator_code">Код</string>
    <string name="elevator_machine">Машина</string>

</resources>
