<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="20dp"
    android:weightSum="2">

    <TextView
        android:id="@+id/no_open_task"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:gravity="center"
        android:text="@string/no_open_task"
        android:layout_weight="1.6"
        android:visibility="gone"/>

    <LinearLayout
        android:id="@+id/label_components_layout"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.8"
        android:orientation="vertical"
        android:weightSum="5">

        <com.daka.servicedesk.base.components.LabelTaskView
            android:id="@+id/task_title"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"/>

        <com.daka.servicedesk.base.components.LabelTaskView
            android:id="@+id/task_location"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"/>

        <com.daka.servicedesk.base.components.LabelTaskView
            android:id="@+id/task_building"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"/>

        <com.daka.servicedesk.base.components.LabelTaskView
            android:id="@+id/task_elevator"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"/>

        <com.daka.servicedesk.base.components.LabelTaskView
            android:id="@+id/task_notes"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"/>

    </LinearLayout>

    <RelativeLayout
        android:id="@+id/map_container"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.8"
        android:orientation="vertical"
        android:padding="10dp">

        <Button
            android:id="@+id/btn_directions"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/tableDarkRow"
            android:textColor="@color/primaryDark"
            android:text="@string/directions"
            android:layout_alignParentBottom="true" />

        <ImageView
            android:id="@+id/map_thumbnail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_above="@+id/btn_directions"
            android:paddingBottom="10dp"
            android:layout_alignParentTop="true" />

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/buttons_layout"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.4">

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/container_new_task">

            <TextView
                android:id="@+id/add_task_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:text="@string/new_task"
                android:textStyle="bold"
                android:layout_marginBottom="10dp"/>

            <android.support.design.widget.FloatingActionButton
                android:id="@+id/add_task"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_below="@id/add_task_text"
                android:layout_margin="2dp"
                android:src="@drawable/ic_plus_white" />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:id="@+id/container_end_task">

            <TextView
                android:id="@+id/end_task_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:text="@string/end_task"
                android:textStyle="bold"
                android:layout_marginBottom="10dp" />

            <android.support.design.widget.FloatingActionButton
                android:id="@+id/end_task"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_below="@id/end_task_text"
                android:layout_centerInParent="true"
                android:layout_margin="2dp"
                android:src="@drawable/ic_stop_white" />

        </RelativeLayout>

    </RelativeLayout>

</LinearLayout>